--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+.cat-info {
+    padding: 20px;
+    font-weight: 300;
+    font-size: 20px;
+}
+
 .hidden {
     display: none;}
 
@@ -15,15 +21,18 @@
     inset: 0px;
     border-radius: 50%;
     border: 5px solid #FFF;
-    animation: prixClipFix 2s linear infinite ;}
+    animation: prixClipFix 2s linear infinite ;
+}
 
 .loader::after{
     transform: rotate3d(90, 90, 0, 180deg );
-    border-color: #FF3D00;}
+    border-color: #FF3D00;
+}
 
 @keyframes rotate {
     0%   {transform: rotate(0deg)}
-    100%   {transform: rotate(360deg)}}
+    100%   {transform: rotate(360deg)}
+}
 
 @keyframes prixClipFix {
     0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
